# DZ_23.2

./: .env.sample  README.md  catalog.json  groups.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_description_alter_blog_views.py  0003_alter_blog_created_at.py  0004_alter_blog_created_at.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_photo_alter_product_price.py  0003_version.py  0004_alter_version_is_version_active.py  0005_alter_version_is_version_active.py  0006_product_owner.py  0007_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_token.py
